--- a/templates/main.html
+++ b/templates/main.html
@@ -6,7 +6,7 @@
     <title>Online Inventory System</title>
     <link
     rel="stylesheet"
-    href="{{ url_for('static', filename='style.css') }}"
+    href="{{ url_for('static', filename='main.css') }}"
     />
 </head>
 <body>
