--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online inventory system</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Welcome to Online Inventory System</h1>
+
+    <div class="purchase_form">
+      <table border="1">
+    <thead>
+    <tr>
+      <th>Purchase Date</th>
+      <th>Store</th>
+      <th>warranty-period</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for purchase in purchases %}
+      <tr>
+        <td>{{ purchase.date }}</td>
+        <td>{{ purchase.store }}</td>
+        <td>{{ purchase.warranty_period }}</td>
+      </tr>
+    {% endfor %}
+    </tbody>
+      </table>
+
+
+
+    <a href="/purchase">Add Purchase infor</a>
+
 </body>
 </html>
