feature:create purchase  DB storage functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
         <td>{{ purchase.date }}</td>
         <td>{{ purchase.store }}</td>
         <td>{{ purchase.warranty_period }}</td>
+        
       </tr>
     {% endfor %}
     </tbody>
@@ -31,7 +32,7 @@
 
 
 
-    <a href="/purchase">Add Purchase infor</a>
+    <a href="/add_purchase">Add Purchase infor</a>
 
 </body>
 </html>
