--- a/templates/purchase_form.html
+++ b/templates/purchase_form.html
@@ -9,7 +9,7 @@
 </head>
 </body>
 <div class="container">
-    <form id="form" action="/purchase" method="POST">
+    <form id="form" action="/add_purchase" method="POST">
         <h1>Purchase Form</h1>
         <div class="input-control">
             <label for="date">Date:</label>
