added: linking part of backend to frontend

--- a/templates/main.html
+++ b/templates/main.html
@@ -24,7 +24,7 @@
         <div class="content">
             <a href="#" class="fas fa-home">Home</a>
             <a href="#" class="fas fa-home">Equipment</a>
-            <a href="#" class="fas fa-home">Location</a>
+            <a href="/location" class="fas fa-home">Location</a>
             <a href="#" class="fas fa-home">Employee</a>
             <a href="#" class="fas fa-home">Purchases</a>
             <a href="#" class="fas fa-home">Logout</a>
