--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,8 @@
+body {
+    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+    font-family: 'Poppins', sans-serif;
+}
+
 .container {
     width: 362px;
     height: 460px;
