--- a/templates/main.html
+++ b/templates/main.html
@@ -22,12 +22,12 @@
             <img src="{{ url_for('static', filename='logo.png') }}" alt="logo">
         </div>
         <div class="content">
-            <a href="#" class="fas fa-home">Home</a>
-            <a href="#" class="fas fa-home">Equipment</a>
-            <a href="/location" class="fas fa-home">Location</a>
-            <a href="#" class="fas fa-home">Employee</a>
-            <a href="#" class="fas fa-home">Purchases</a>
-            <a href="#" class="fas fa-home">Logout</a>
+            <a href="/" class="home active">Home</a>
+            <a href="#" class="home">Equipment</a>
+            <a href="/location" class="home">Location</a>
+            <a href="#" class="home">Employee</a>
+            <a href="/purchase" class="home">Purchases</a>
+            <a href="#" class="home">Logout</a>
         </div>
     </section>
 
