--- a/templates/purchaseList.html
+++ b/templates/purchaseList.html
@@ -23,46 +23,46 @@
             <img src="{{ url_for('static', filename='logo.png') }}" alt="logo">
         </div>
         <div class="content">
-            <a href="#" class="home">Home</a>
+            <a href="/" class="home">Home</a>
             <a href="#" class="home">Equipment</a>
-            <a href="/location" class="fas fa-home">Location</a>
+            <a href="/location" class="home">Location</a>
             <a href="#" class="home">Employee</a>
-            <a href="#" class="home">Purchases</a>
+            <a href="/purchase" class="home active">Purchases</a>
             <a href="#" class="home">Logout</a>
         </div>
     </section>
+    
     <!-- <marquee behavior="alternate" direction="right" scrollamount="10" margin-left="-300px" margin-right="300px">
       <h1>Welcome To Our Online Inventory System</h1>
     </marquee> -->
     <div class="marquee-container">
       <h1 class="marquee">Welcome To Our Online Inventory System</h1>
     </div>
-    <div class="location-form">
-      <a href="/add-location" class="btn1">Add Location</a>
-      <table border="1" style="overflow: auto;">
-        <thead>
-          <tr>
-            <th>Location Name</th>
-            <th>Number Of Offices</th>
-            <th>Head Quater Contacts</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for location in locations  %}
-            <tr>
-              <td>{{ location.location_name }}</td>
-              <td>{{ location.number_of_offices}}</td>
-              <td>{{ location.head_quater_contact}}</td>
-              <td class="action">
-                <a href="#"><i class="fa fa-edit" style="font-size:24px"></i></a>
-                <a href="#"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
-              </td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      <!-- <a href="/add-location" class="btn1">Add Location</a> -->
+    <div class="purchase-form">
+        <a href="/add-purchase" class="btn1">Add Purchase</a>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Purchase Date</th>
+                    <th>Store</th>
+                    <th>Warranty Period (months)</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for purchase in purchases %}
+                    <tr>
+                        <td>{{ purchase.date }}</td>
+                        <td>{{ purchase.store }}</td>
+                        <td>{{ purchase.warranty_period }}</td>   
+                        <td class="action">
+                            <a href="#"><i class="fa fa-edit" style="font-size:24px"></i></a>
+                            <a href="#"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
