--- a/templates/locationList.html
+++ b/templates/locationList.html
@@ -56,8 +56,8 @@
               <td>{{ location.number_of_offices}}</td>
               <td>{{ location.head_quater_contact}}</td>
               <td class="action">
-                <a href="#"><i class="fa fa-edit" style="font-size:24px"></i></a>
-                <a href="#"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
+                <a href="/edit_location{{ location.id }}"><i class="fa fa-edit" style="font-size:24px"></i></a>
+                <a href="/delete_location{{ location.id }}"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
               </td>
             </tr>
           {% endfor %}
