--- a/static/main.css
+++ b/static/main.css
@@ -24,7 +24,16 @@ body {
   font-size: 20px;
   border-radius: 5px;
   background: #707576;
+  color: #fff;
+  font-weight: bold;
 }
+
+.header button:hover{
+  background: darkslategrey;
+  color: black;
+  font-weight: bold;
+}
+
 
 .header img{
   width: 45px;
@@ -34,6 +43,15 @@ body {
   float: right;
   justify-content: center;
   margin-right: 50px;
+}
+
+#sidebar-icon {
+  content: "\25C2";
+  margin-left: 300px;
+  font-size: 50px;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #000;
 }
 
 
@@ -110,6 +128,7 @@ h1{
   margin-top: 40px;
   color: darkslategrey;
 }
+
 
 .cards {
   display: flex;
