--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <div class="header">
-        <input type="search" id="query" name="search" placeholder="Search...">
+      <a href="#" id="sidebar-icon">&#9666;</a>
+        <input type="search" id="query" name="search" placeholder="Search..." style="margin-left: 70px;">
         <button>Submit</button>
         <a href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt=""></a>
     </div>
@@ -34,19 +35,19 @@
     <h1>Welcome To Our Online Inventory System</h1>
     <div class="cards">
         <div class="card" id="card1">
-          <h3>N* of Equipments</h3><br>
+          <h3>N° of Equipments</h3><br>
           <p>20</p>
         </div>
         <div class="card" id="card2">
-          <h3>N* of Employees</h3><br>
+          <h3>N° of Employees</h3><br>
           <p>30</p>
         </div>
         <div class="card" id="card3">
-          <h3>N* of Offices</h3><br>
+          <h3>N° of Offices</h3><br>
           <p>05</p>
         </div>
         <div class="card" id="card4">
-          <h3>N* of Purchases</h3><br>
+          <h3>N° of Purchases</h3><br>
           <p>10</p>
         </div>
       </div>
