--- a/templates/main.html
+++ b/templates/main.html
@@ -35,19 +35,23 @@
     <h1>Welcome To Our Online Inventory System</h1>
     <div class="cards">
         <div class="card" id="card1">
-          <h3>N° of Equipments</h3><br>
+          <h3>N° of Equipments</h3>
+          <hr><br>
           <p>20</p>
         </div>
         <div class="card" id="card2">
-          <h3>N° of Employees</h3><br>
+          <h3>N° of Employees</h3>
+          <hr><br> 
           <p>30</p>
         </div>
         <div class="card" id="card3">
-          <h3>N° of Offices</h3><br>
+          <h3>N° of Offices</h3>
+          <hr><br> 
           <p>05</p>
         </div>
         <div class="card" id="card4">
-          <h3>N° of Purchases</h3><br>
+          <h3>N° of Purchases</h3>
+          <hr><br> 
           <p>10</p>
         </div>
       </div>
