--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Purchase Form</title>
+  <title>Employee Form</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}">
 </head>
 
@@ -13,11 +13,11 @@
   <script src="script.js"></script>
 </body>
 <div class="container">
-    <form id="form" action="/">
+    <form id="form" action="/add-employee" method="POST">
         <h1>Employee Form</h1>
         <div class="input-control">
-            <label for="type">Name:</label>
-            <input id="name" name="name" type="text" >
+            <label for="employee_name">Name:</label>
+            <input id="employee_name" name="employee_name" type="text" >
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
@@ -31,19 +31,24 @@
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
+            <label for="phone_number">Phone:</label>
+            <input id="phone_number" name="phone_number" type="number">
+            <!-- <div class="error"></div> -->
+        </div>
+        <div class="input-control">
             <label for="department">Department:</label>
             <input id="department" name="department" type="text">
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
-            <label for="phone_number">Phone number:</label>
-            <input id="phone_number" name="phone_number" type="number">
-            <!-- <div class="error"></div> -->
-        </div>
-        <div class="input-control">
-            <label for="location">Location:</label>
-            <input id="location"name="location" type="text">
-            <!-- <div class="error"></div> -->
+            <label for="location_id">Location:</label>
+            <select name="location_id" id="location_id" required>
+                <option value="null">--select location--</option>
+                {% for location in locations %}
+                    <option name="location_id" >{{location.location_name}}</option>
+                {% endfor %}
+            </select>
+           <!-- <div class="error"></div> -->
         </div>
         <center>
             <button type="submit" id="mybtn">Submit</button>
