--- a/templates/add_equipment.html
+++ b/templates/add_equipment.html
@@ -17,32 +17,32 @@
         <h1>Equipment Form</h1>
         <div class="input-control">
             <label for="type">Type:</label>
-            <input id="type" name="type" type="text" >
+            <input id="type" name="type" type="text" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="serial">Serial N°:</label>
-            <input id="serial" name="serial" type="number">
+            <input id="serial" name="serial" type="number" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="model">Model N°:</label>
-            <input id="model" name="model" type="number">
+            <input id="model" name="model" type="number" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="purchse_date">Purchase date:</label>
-            <input id="purchase" name="purchase" type="date">
+            <input id="purchase" name="purchase" type="date" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
-            <label for="employee">Employee_id:</label>
-            <input id="employee" name="employee" type="tel">
+            <label for="employee">Employee:</label>
+            <input id="employee" name="employee" type="tel" required> 
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="location">Location:</label>
-            <input id="location"name="location" type="text">
+            <input id="location"name="location" type="text" required>
             <!-- <div class="error"></div> -->
         </div>
         <center>
