--- a/templates/employeeList.html
+++ b/templates/employeeList.html
@@ -25,8 +25,8 @@
         <div class="content">
             <a href="/" class="home">Home</a>
             <a href="#" class="home">Equipment</a>
-            <a href="/location" class="home active">Location</a>
-            <a href="/employee" class="home">Employee</a>
+            <a href="/location" class="home">Location</a>
+            <a href="/employee" class="home active">Employee</a>
             <a href="/purchase" class="home">Purchases</a>
             <a href="#" class="home">Logout</a>
         </div>
@@ -38,7 +38,7 @@
     <div class="marquee-container">
       <h1 class="marquee">Welcome To Our Online Inventory System</h1>
     </div>
-    <div class="employee-form">
+    <div class="location-form">
       <a href="/add-employee" class="btn1">Add Employee</a>
       <table border="1" style="overflow: auto;">
         <thead>
