--- a/templates/locationForm.html
+++ b/templates/locationForm.html
@@ -15,17 +15,17 @@
         <h1>Location Form</h1>
         <div class="input-control">
             <label for="name">Name:</label>
-            <input id="name" name="location_name" type="text">
+            <input id="name" name="location_name" type="text" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="offices">Number Of Offices:</label>
-            <input id="offices" name="number_of_offices" type="number">
+            <input id="offices" name="number_of_offices" type="number" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="Contact">HeadQuater Contact:</label>
-            <input id="Contact" name="head_quater_contact" type="text">
+            <input id="Contact" name="head_quater_contact" type="text" required>
             <!-- <div class="error"></div> -->
         </div>
         <center>
