--- a/templates/purchase_form.html
+++ b/templates/purchase_form.html
@@ -13,17 +13,17 @@
         <h1>Purchase Form</h1>
         <div class="input-control">
             <label for="date">Date:</label>
-            <input id="date" name="date" type="date" >
+            <input id="date" name="date" type="date" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="store">Store:</label>
-            <input id="store" name="store" type="text">
+            <input id="store" name="store" type="text" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="warranty-period">Warranty Period:</label>
-            <input id="warranty-period"name="warranty-period" type="number">
+            <input id="warranty-period"name="warranty-period" type="number" required>
             <!-- <div class="error"></div> -->
         </div>
         <center>
