--- a/static/style2.css
+++ b/static/style2.css
@@ -48,6 +48,17 @@ body {
     background-color: #D9D9D9;
 }
 
+.input-control select{
+    border: 2px solid #f0f0f0;
+	border-radius: 4px;
+	display: block;
+	font-size: 12px;
+	padding: 10px;
+	width: 292;
+    height: 38;
+    background-color: #D9D9D9;
+}
+
 #form .input-control{ 
     padding: 10px;
     margin-top: 20px;
