--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -17,27 +17,27 @@
         <h1>Employee Form</h1>
         <div class="input-control">
             <label for="employee_name">Name:</label>
-            <input id="employee_name" name="employee_name" type="text" >
+            <input id="employee_name" name="employee_name" type="text" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="gender">Gender:</label>
-            <input id="gender" name="gender" type="text">
+            <input id="gender" name="gender" type="text" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="title">Title:</label>
-            <input id="title" name="title" type="text">
+            <input id="title" name="title" type="text" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="phone_number">Phone:</label>
-            <input id="phone_number" name="phone_number" type="number">
+            <input id="phone_number" name="phone_number" type="number" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="department">Department:</label>
-            <input id="department" name="department" type="text">
+            <input id="department" name="department" type="text" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
