--- a/templates/purchaseList.html
+++ b/templates/purchaseList.html
@@ -26,7 +26,7 @@
             <a href="/" class="home">Home</a>
             <a href="#" class="home">Equipment</a>
             <a href="/location" class="home">Location</a>
-            <a href="#" class="home">Employee</a>
+            <a href="/employee" class="home">Employee</a>
             <a href="/purchase" class="home active">Purchases</a>
             <a href="#" class="home">Logout</a>
         </div>
