--- a/templates/main.html
+++ b/templates/main.html
@@ -25,7 +25,7 @@
         </div>
         <div class="content">
             <a href="/" class="home active">Home</a>
-            <a href="#" class="home">Equipment</a>
+            <a href="/equipment" class="home">Equipment</a>
             <a href="/location" class="home">Location</a>
             <a href="/employee" class="home">Employee</a>
             <a href="/purchase" class="home">Purchases</a>
@@ -36,9 +36,9 @@
     <h1>Welcome To Our Online Inventory System</h1>
     <div class="cards">
         <div class="card" id="card1">
-          <h3>N° of Equipments</h3>
+          <h3>N° of Equipment</h3>
           <hr><br>
-          <a href="/equipment"><p>20</p></a>
+          <a href="/equipment"><p>{{ equipment_count }}</p></a>
         </div>
         <div class="card" id="card2">
           <h3>N° of Employees</h3>
