--- a/templates/add_equipment.html
+++ b/templates/add_equipment.html
@@ -13,7 +13,7 @@
   <script src="script.js"></script>
 </body>
 <div class="container">
-    <form id="form" action="/">
+    <form id="form" action="/add-equipment" method="POST">
         <h1>Equipment Form</h1>
         <div class="input-control">
             <label for="type">Type:</label>
@@ -21,28 +21,43 @@
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
-            <label for="serial">Serial N°:</label>
-            <input id="serial" name="serial" type="number" required>
+            <label for="serial_number">Serial N°:</label>
+            <input id="serial_number" name="serial_number" type="number" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
-            <label for="model">Model N°:</label>
-            <input id="model" name="model" type="number" required>
+            <label for="model_number">Model N°:</label>
+            <input id="model_number" name="model_number" type="number" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
-            <label for="purchse_date">Purchase date:</label>
-            <input id="purchase" name="purchase" type="date" required>
+            <label for="purchase_date">Purchase date:</label>
+            <select name="purchase_date" id="purchase_date" required>
+                <option value="null">--select date--</option>
+                {% for purchase in purchases %}
+                    <option name="purcase_date" >{{purchase.date}}</option>
+                {% endfor %}
+            </select>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
             <label for="employee">Employee:</label>
-            <input id="employee" name="employee" type="tel" required> 
+            <select name="employee" id="employee" required>
+                <option value="null">--select employee--</option>
+                {% for employee in employees %}
+                    <option name="employee" >{{employee.employee_name}}</option>
+                {% endfor %}
+            </select> 
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
-            <label for="location">Location:</label>
-            <input id="location"name="location" type="text" required>
+            <label for="location_id">Location:</label>
+            <select name="location_id" id="location_id" required>
+                <option value="null">--select location--</option>
+                {% for location in locations %}
+                    <option name="location_id" >{{location.location_name}}</option>
+                {% endfor %}
+            </select>
             <!-- <div class="error"></div> -->
         </div>
         <center>
