--- a/templates/locationList.html
+++ b/templates/locationList.html
@@ -24,7 +24,7 @@
         </div>
         <div class="content">
             <a href="/" class="home">Home</a>
-            <a href="#" class="home">Equipment</a>
+            <a href="/equipment" class="home">Equipment</a>
             <a href="/location" class="home active">Location</a>
             <a href="/employee" class="home">Employee</a>
             <a href="/purchase" class="home">Purchases</a>
