--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -31,6 +31,14 @@
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
+            <label for="type">Type:</label>
+            <select name="type" id="type" required>
+                <option value="null">--select type--</option>
+                <option name="type">User</option>
+                <option name="type">Admin</option>
+            </select>
+        </div>
+        <div class="input-control">
             <label for="phone_number">Phone:</label>
             <input id="phone_number" name="phone_number" type="number" required>
             <!-- <div class="error"></div> -->
@@ -48,7 +56,6 @@
                     <option name="location_id" >{{location.location_name}}</option>
                 {% endfor %}
             </select>
-           <!-- <div class="error"></div> -->
         </div>
         <center>
             <button type="submit" id="mybtn">Submit</button>
