--- a/templates/employeeList.html
+++ b/templates/employeeList.html
@@ -23,7 +23,7 @@
             <img src="{{ url_for('static', filename='logo.png') }}" alt="logo">
         </div>
         <div class="content">
-            <a href="/" class="home">Home</a>
+            <a href="/entry_point" class="home">Home</a>
             <a href="/equipment" class="home">Equipment</a>
             <a href="/location" class="home">Location</a>
             <a href="/employee" class="home active">Employee</a>
@@ -46,6 +46,7 @@
             <th>Employee Name</th>
             <th>Gender</th>
             <th>Title</th>
+            <th>Type</th>
             <th>Phone</th>
             <th>Department</th>
             <th>Location</th>
@@ -58,12 +59,14 @@
               <td>{{ employee.employee_name }}</td>
               <td>{{ employee.gender}}</td>
               <td>{{ employee.title}}</td>
+              <td>{{ employee.type}}</td>
               <td>{{ employee.phone_number}}</td>
               <td>{{ employee.department}}</td>
               <td>{{ employee.location_id}}</td>
               <td class="action">
                 <a href="/edit_employee{{ employee.id }}"><i class="fa fa-edit" style="font-size:24px"></i></a>
                 <a href="/delete_employee{{ employee.id }}"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
+                <a href="#" class="add-equipment">Assign Equipment</a>
               </td>
             </tr>
           {% endfor %}
