--- a/templates/locationList.html
+++ b/templates/locationList.html
@@ -23,7 +23,7 @@
             <img src="{{ url_for('static', filename='logo.png') }}" alt="logo">
         </div>
         <div class="content">
-            <a href="/" class="home">Home</a>
+            <a href="/entry_point" class="home">Home</a>
             <a href="/equipment" class="home">Equipment</a>
             <a href="/location" class="home active">Location</a>
             <a href="/employee" class="home">Employee</a>
