--- a/templates/main.html
+++ b/templates/main.html
@@ -24,7 +24,7 @@
             <img src="{{ url_for('static', filename='logo.png') }}" alt="logo">
         </div>
         <div class="content">
-            <a href="/" class="home active">Home</a>
+            <a href="/entry_point" class="home active">Home</a>
             <a href="/equipment" class="home">Equipment</a>
             <a href="/location" class="home">Location</a>
             <a href="/employee" class="home">Employee</a>
