--- a/templates/locationList.html
+++ b/templates/locationList.html
@@ -28,7 +28,7 @@
             <a href="/location" class="home active">Location</a>
             <a href="/employee" class="home">Employee</a>
             <a href="/purchase" class="home">Purchases</a>
-            <a href="#" class="home">Logout</a>
+            <a href="/login" class="home">Logout</a>
         </div>
     </section>
 
