--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="input-control">
                     <label for="password">password:</label>
-                    <input id="password" name="password" type="password" placeholder="password" required>
+                    <input id="password" name="password" type="password" placeholder="password" required><br>
                 </div>
                 <button class="btn" type="submit">Login</button>
             </form>
