--- a/templates/main.html
+++ b/templates/main.html
@@ -29,7 +29,7 @@
             <a href="/location" class="home">Location</a>
             <a href="/employee" class="home">Employee</a>
             <a href="/purchase" class="home">Purchases</a>
-            <a href="#" class="home">Logout</a>
+            <a href="/login" class="home">Logout</a>
         </div>
     </section>
 
