fix(global): fixed naming conventions

--- a/templates/equipmentList.html
+++ b/templates/equipmentList.html
@@ -60,7 +60,7 @@
               <td>{{ equip.model_number}}</td>
               <td>{{ equip.purchase_date}}</td>
               <td>{{ equip.employee}}</td>
-              <td>{{ equip.location_id}}</td>
+              <td>{{ equip.location}}</td>
               <td class="action">
                 <a href="/edit_equipment{{ equip.barcode_number }}"><i class="fa fa-edit" style="font-size:24px"></i></a>
                 <a href="/delete_equipment{{ equip.barcode_number }}"><i class="fa fa-trash-o" style="font-size:24px"></i></a>
