--- a/templates/add_equipment.html
+++ b/templates/add_equipment.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Purchase Form</title>
+  <title>Equipment Form</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}">
 </head>
 
@@ -51,11 +51,11 @@
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
-            <label for="location_id">Location:</label>
-            <select name="location_id" id="location_id" required>
+            <label for="location">Location:</label>
+            <select name="location" id="location" required>
                 <option value="null">--select location--</option>
                 {% for location in locations %}
-                    <option name="location_id" >{{location.location_name}}</option>
+                    <option name="location" >{{location.location_name}}</option>
                 {% endfor %}
             </select>
             <!-- <div class="error"></div> -->
