--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
 </head>
 <body>
-    <marquee behavior="alternate" direction="right" scrollamount="14">
+    <h1 behavior="alternate" direction="right" scrollamount="14">
       <h1 class="marquee">Welcome to our Online Inventory System</h1>
-    </marquee>
-    <p class="mytext">Please Endeavour to SignIn to Explore The Powerful Features Of Our System</p>
-    <p class="myp">Let's Get Started.......</p>
+    </h1>
+    <p class="mytext">Sign In And Explore Infinite Possibilities</p>
+    <p class="myp">.......</p>
     <br>
     <a href="/login" class="mybtn">Login</a>
 </body>
