feat(backend): added password for users and admins

--- a/templates/employeeForm.html
+++ b/templates/employeeForm.html
@@ -21,6 +21,11 @@
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
+            <label for="password">Password:</label>
+            <input id="password" name="password" type="text" required>
+            <!-- <div class="error"></div> -->
+        </div>
+        <div class="input-control">
             <label for="gender">Gender:</label>
             <input id="gender" name="gender" type="text" required>
             <!-- <div class="error"></div> -->
