feat(global): adjust employee form

--- a/templates/employeeForm.html
+++ b/templates/employeeForm.html
@@ -22,7 +22,7 @@
         </div>
         <div class="input-control">
             <label for="password">Password:</label>
-            <input id="password" name="password" type="text" required>
+            <input id="password" name="password" type="password" required>
             <!-- <div class="error"></div> -->
         </div>
         <div class="input-control">
