--- a/templates/main.html
+++ b/templates/main.html
@@ -15,7 +15,7 @@
       <a href="#" id="sidebar-icon">&#9666;</a>
         <input type="search" id="query" name="search" placeholder="Search..." style="margin-left: 70px;" disabled>
         <button>Submit</button>
-        <a href="#"><img src="{{ url_for('static', filename='logo.png') }}" alt=""></a>
+        <span id="login-name">{{ name }}</span>
     </div>
 
     <!--sidebar section-->
