--- a/templates/login.html
+++ b/templates/login.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class="flashes">
+            {% for message in messages %}
+                <p>{{ message }}</p>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
     <div class="container">
-        <div class="row">
-            <form id="Loginform" class="column1" action="#" method="POST">
+        <form id="Loginform" action="/login" method="POST">
+            <div class="column1">
                 <h1 class="h1">Login Form</h1>
                 <div class="input-control">
                     <label for="username">username:</label>
@@ -20,20 +29,20 @@
                     <input id="password" name="password" type="password" placeholder="password" required><br>
                 </div>
                 <button class="btn" type="submit">Login</button>
-            </form>
+            </div>
             <div class="column2">
                 <h1 class="mytext">Welcome to OIS</h1>
                 <p class="login-as text-center">Login as:</p>
                 <div class="user">
-                    <input type="radio" name="login" value="1">
-                    <label for="user">User</label>
+                    <input type="radio" id="user-login" name="loging" value="User" required>
+                    <label for="user-login">User</label>
                 </div>
                 <div class="admin">
-                    <input type="radio" name="login" value="1">
-                    <label for="user">Admin</label>
+                    <input type="radio" id="admin-login" name="loging" value="Admin"required>
+                    <label for="admin-login">Admin</label>
                 </div>
             </div>
-        </div>            
+        </form>          
     </div>
 </body>
 </html>
